--- a/Assembler/Makefile
+++ b/Assembler/Makefile
@@ -6,21 +6,21 @@
 #    By: immn <immn@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/02/04 13:59:19 by immn              #+#    #+#              #
-#    Updated: 2020/02/06 13:55:04 by immn             ###   ########.fr        #
+#    Updated: 2020/02/08 23:06:28 by immn             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = ../asm
+NAME	= ../asm
 
-FLAGS = #-Wall -Wextra -Werror
+FLAGS	= #-Wall -Wextra -Werror
 
-LIB = ../libft/libft.a
-INC = -I../libft/includes/ -I./inc/
-SRC =	main.c error_msg.c first_validation.c translate_to_bin.c \
-		top_part_of_file.c
+LIB		= ../libft/libft.a
+INC		= -I../libft/includes/	-I./inc/
+SRC		=	main.c error_msg.c	first_validation.c	translate_to_bin.c		\
+			top_part_of_file.c	s_out.c				reading_instructions.c	\
 
 OBJ_DIR = obj/
-OBJ = $(patsubst %.c,%.o,$(SRC))
+OBJ		= $(patsubst %.c,%.o,$(SRC))
 
 all: $(NAME)
 
