Complete validation part of VM
Small bugfix in main file of VM
Updated all Makefiles (basically made them work)
Added necessary for the Corewar libft functions
Unified state of all project directories (and Makefiles consequently)
Updated VM's corewar.h file to make the VM compile
Fixed VM's is_valid.c type conversion

--- a/Assembler/Makefile
+++ b/Assembler/Makefile
@@ -38,7 +38,7 @@ $(NAME): $(addprefix $(OBJD),$(OBJ))
 	@gcc $(FLAGS) $(addprefix $(OBJD), $(OBJ)) $(LIB) $(INCD) -o $(NAME)
 
 clean:
-	@rm -rf obj
+	@rm -rf $(OBJD)
 
 fclean: clean
 	@rm -rf $(NAME)
