--- a/VM/Makefile
+++ b/VM/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: aschimme <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2020/09/10 19:11:03 by aschimme          #+#    #+#              #
+#    Updated: 2020/09/10 19:14:50 by aschimme         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = ../corewar
 
 SRCS = $(wildcard srcs/*.c)
